--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -36,28 +36,28 @@ body {
   background-repeat: no-repeat;
   opacity: 0;
   z-index: 0;
-  animation: imageAnimation 50s linear infinite; 
+  animation: imageAnimation 30s linear infinite; 
 }
 
 .slideshow li:nth-child(1) { 
-  background-image: url(http://i.imgur.com/K3mPv14.jpg) 
+  background-image: url(https://images.unsplash.com/photo-1487611459768-bd414656ea10?dpr=1&auto=format&fit=crop&w=1000&q=80&cs=tinysrgb&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D);
 }
 .slideshow li:nth-child(2) { 
-  background-image: url(http://i.imgur.com/SBEmFpv.jpg);
+  background-image: url(https://images.unsplash.com/photo-1453090522900-026de5423c2a?dpr=1&auto=format&fit=crop&w=1000&q=80&cs=tinysrgb&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D);
   animation-delay: 10s; 
 }
 .slideshow li:nth-child(3) { 
-  background-image: url(http://i.imgur.com/emvhOnb.jpg);
+  background-image: url(https://images.unsplash.com/photo-1475771742060-8c9a89107e1c?dpr=1&auto=format&fit=crop&w=1000&q=80&cs=tinysrgb&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D);
   animation-delay: 20s; 
 }
-.slideshow li:nth-child(4) { 
-  background-image: url(http://i.imgur.com/2LSMCmJ.jpg);
-  animation-delay: 30s; 
-}
-.slideshow li:nth-child(5) { 
-  background-image: url(http://i.imgur.com/TVGe0Ef.jpg);
-  animation-delay: 40s; 
-}
+/*.slideshow li:nth-child(4) { */
+/*  background-image: url(http://i.imgur.com/2LSMCmJ.jpg);*/
+/*  animation-delay: 30s; */
+/*}*/
+/*.slideshow li:nth-child(5) { */
+/*  background-image: url(http://i.imgur.com/TVGe0Ef.jpg);*/
+/*  animation-delay: 40s; */
+/*}*/
 
 @keyframes imageAnimation { 
   0% { 
@@ -74,6 +74,26 @@ body {
   30% {
     opacity: 0
   }
+}
+
+.btn-success{
+  background-color: rgb(109, 37, 111);
+  border-color: rgb(89, 17, 91);
+}
+
+.btn-success:hover{
+  background-color: rgb(154, 94, 156);
+  border-color: rgb(109, 37, 111);
+}
+
+.btn-default{
+  background-color: rgb(109, 37, 111);
+  border-color: rgb(89, 17, 91);
+}
+
+.btn-default:hover{
+  background-color: rgb(154, 94, 156);
+  border-color: rgb(109, 37, 111);
 }
 
 /* Older browser support - .no-cssanimations class added by modernizr */
