--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,3 +1,26 @@
+body{
+    background-image: url(https://images.unsplash.com/photo-1493413308306-43a8773ee330?dpr=1&auto=format&fit=crop&w=1000&q=80&cs=tinysrgb&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    width:100%;
+    z-index:0;
+      height:100%;
+      background-size: calc(100% + 50px);
+}
+
+.caption-full{
+    background-color: rgb(240, 240, 240);
+}
+
+.well{
+    background-color: rgb(240, 240, 240);
+}
+
+.title{
+    text-align: center;
+}
+
 .thumbnail img{
     width: 100%;
 }
@@ -13,3 +36,27 @@
 .delete-form{
     display: inline;
 }
+
+.navbar-inverse{
+    background-color: rgb(109, 37, 111);
+    color: rgb(221, 194, 222); 
+}
+
+.jumbotron{
+    background-color: rgba(221, 194, 222, 0.7);
+}
+
+li:hover{
+    background-color: rgb(154, 94, 156);
+}
+
+.btn-primary{
+  background-color: rgb(109, 37, 111);
+  border-color: rgb(89, 17, 91);
+}
+
+.btn-primary:hover{
+  background-color: rgb(154, 94, 156);
+  border-color: rgb(109, 37, 111);
+}
+
