--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,11 +1,25 @@
 <% include ./partials/header.ejs %>
 
-<h1>Login Form</h1>
+<div class="row">
+    <h1 class="title">Log in</h1>
+    <div class="col-md-5">
+    </div>
+    <div class="col-md-2">
+            <form action="/login" method="POST">
+                <div class= form-group>
+                    <input class="form-control" type="text" name="username" placeholder="username">
+                </div>
+                <div class="form-group">
+                    <input class="form-control" type="password" name="password" placeholder="password">
+                </div>
+                <div class="form-group">
+                    <button class="btn btn-primary btn-block">Log in</button>
+                </div>
+            </form>
+    </div>
+    <div class="col-md-5">
+    </div>
+</div>
 
-<form action="/login" method="POST">
-    <input type="text" name="username" placeholder="username">
-    <input type="password" name="password" placeholder="password">
-    <button>Log in</button>
-</form>
 
 <% include ./partials/footer.ejs %>
