--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,11 +1,26 @@
 <% include ./partials/header.ejs %>
 
-<h1>Register !!!</h1>
 
-<form action="/register" method="POST">
-    <input type="text" name="username" placeholder="username">
-    <input type="password" name="password" placeholder="password">
-    <button>Sign up</button>
-</form>
+
+<div class="row">
+    <h1 class="title">Sign up</h1>
+    <div class="col-md-5">
+    </div>
+    <div class="col-md-2">
+            <form action="/register" method="POST">
+                <div class= form-group>
+                    <input class="form-control" type="text" name="username" placeholder="username">
+                </div>
+                <div class="form-group">
+                    <input class="form-control" type="password" name="password" placeholder="password">
+                </div>
+                <div class="form-group">
+                    <button class="btn btn-primary btn-block">Sign up</button>
+                </div>
+            </form>
+    </div>
+    <div class="col-md-5">
+    </div>
+</div>
 
 <% include ./partials/footer.ejs %>
