landing button text change

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -23,7 +23,7 @@
     
     <div id="landing-header">
  		<h1>Welcome to CommonBlogs!</h1>
-		<a href="/blogs" class="btn btn-lg btn-success">View All Blogs</a>
+		<a href="/blogs" class="btn btn-lg btn-success">Forward!</a>
     </div>
     
     <ul class="slideshow">
