--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -12,7 +12,7 @@
                 <button class="btn btn-lg btn-primary btn-block">Submit</button>
                 </div>
             </form>
-            <a href="/blogs">Go back.</a>
+            <a class="btn-warning btn btn-block" href="/blogs">Go back.</a>
         </div>
     </div>
 </div>
