--- a/views/blogs/show.ejs
+++ b/views/blogs/show.ejs
@@ -13,9 +13,9 @@
                     <p><%= blog.content %></p>
                     <p><em>Submited by <%= blog.author.username %></em> on <%= blog.created_at.toDateString() %></p>
                     <% if(currentUser && blog.author.id.equals(currentUser._id)){ %>
-                        <a class="btn btn-success" href="/blogs/<%= blog._id %>/edit">Edit</a>
+                        <a class="btn btn-success btn-xs" href="/blogs/<%= blog._id %>/edit">Edit</a>
                         <form class="delete-form" action="/blogs/<%= blog._id %>?_method=DELETE" method="POST">
-                            <button class="btn btn-danger">Delete</button>
+                            <button class="btn btn-danger btn-xs">Delete</button>
                         </form>
                     <% } %>
                 </div>
