--- a/views/comments/edit.ejs
+++ b/views/comments/edit.ejs
@@ -4,7 +4,7 @@
     <div class="row">
         <h1 style="text-align: center">Edit your comment </h1>
         <div style="width: 30%; margin: 25px auto">
-            <form action="/campgrounds/<%= campground_id %>/comments/<%= comment._id %>?_method=PUT" method="POST">
+            <form action="/blogs/<%= blog_id %>/comments/<%= comment._id %>?_method=PUT" method="POST">
                 <div class="form-group">
                     <input class="form-control" type="text" name="comment[text]" value="<%= comment.text %>">
                 </div>
@@ -12,7 +12,7 @@
                 <button class="btn btn-lg btn-primary btn-block">Submit</button>
                 </div>
             </form>
-            <a href="/campgrounds">Go back.</a>
+            <a class="btn-warning btn btn-block" href="/blogs">Go back.</a>
         </div>
     </div>
 </div>
